@@ -105,7 +105,7 @@ Caminio.prototype.init = function initCaminio( options ){
 Caminio.prototype.run = function runCaminio( modules ){
 
   var caller = util.getCaller();
-  new Gear({ api: true, absolutePath: dirname(caller.filename), name: basename(dirname( caller.filename )) });
+  this.mainGear = new Gear({ api: true, absolutePath: dirname(caller.filename), name: basename(dirname( caller.filename )) });
 
   this.init();
 
