@@ -48,10 +48,14 @@ module.exports = function ServerSetup( caminio, app ){
 
   app.use( express.favicon() );
   
-  caminio.views.publicPaths.forEach( function( publicPath ){
-    console.log('setting up public path', publicPath);
-    app.use( express.static( publicPath ) ); 
-  });
+  if( caminio.env === 'production' )
+    app.use( express.static( caminio.config.root+'/public' ) );
+  else{
+    caminio.views.publicPaths.forEach( function( publicPath ){
+      console.log('setting up public path', publicPath);
+      app.use( express.static( publicPath ) ); 
+    });
+  }
   
   //app.use( express.static( caminio.config.root+'/public' ) ); 
 
@@ -65,8 +69,8 @@ module.exports = function ServerSetup( caminio, app ){
 
   setupErrorPages();
 
-  if( caminio.env === 'development' ){
     app.locals.pretty = true;
+  if( caminio.env === 'development' ){
     app.use( express.errorHandler({ dumpExceptions: true, showStack: true }) );
     app.use(express.logger('dev'));
   }
